haskell-migration/ebm-mars/build_v11.log
ebm-mars> build (lib + exe) with ghc-9.4.8
Preprocessing library for ebm-mars-0.1.0.0..
Building library for ebm-mars-0.1.0.0..
[10 of 11] Compiling Verification

/home/takeru/git/EBM-on-Mars/haskell-migration/ebm-mars/src/Verification.hs:80:15: error:
    • No instance for (V.Unbox [Char]) arising from a use of ‘V.toList’
    • In the first argument of ‘($)’, namely ‘V.toList’
      In the expression:
        V.toList
          $ V.imap
              (\ i (a, r) -> (name ++ "[" ++ show i ++ "]", a, r)) failures
      In the expression:
        if V.null failures then
            []
        else
            V.toList
              $ V.imap
                  (\ i (a, r) -> (name ++ "[" ++ show i ++ "]", a, r)) failures
   |
80 |          else V.toList $ V.imap (\i (a, r) -> (name ++ "[" ++ show i ++ "]", a, r)) failures
   |               ^^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package ebm-mars-0.1.0.0 (scroll up to its section to see the error) using:
       /home/takeru/.stack/setup-exe-cache/x86_64-linux/Cabal-simple_w2MFVN35_3.8.1.0_ghc-9.4.8 --verbose=1 --builddir=.stack-work/dist/x86_64-linux/ghc-9.4.8 build lib:ebm-mars exe:ebm-mars-exe --ghc-options ""
       Process exited with code: ExitFailure 1 
